# CitlaliScrapper

./: .env  Cargo.toml  README.md
src/: env.rs  main.rs  register.rs  scrapper.rs  struct_file.rs
src/characters/genshin/: get_genshin_characters.rs
src/infographics/gazette_de_teyvat/: main_gazette.rs  scrapper.rs  utils.rs
src/infographics/keqing_mains/: main_kgm.rs  scrapper.rs  utils.rs
src/keqing_mains/: main_kgm.rs  register.rs  scrapper.rs  utils.rs
src/uid_infos/: get_uid_infos.rs  player_icon_update.rs
