[package]
name = "GiHandlerInfographics"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
